Fix text alignment for word-break
Recent google chrome updates showing awkard alignments on table.To
avoid them modifications in word-break css property are carried out
so that usability of content remains coherent on all browsers.

PROD-185

--- a/lms/static/sass/course/courseware/_courseware.scss
+++ b/lms/static/sass/course/courseware/_courseware.scss
@@ -136,7 +136,6 @@ html.video-fullscreen {
     .xblock {
       overflow-wrap: break-word;
       word-wrap: break-word;
-      word-break: break-word;
       margin: 0 auto;
       font: -apple-system-body;
 
